--- a/sanchpetblog/content/essays/20240107_2_books_to_start_2024.md
+++ b/sanchpetblog/content/essays/20240107_2_books_to_start_2024.md
@@ -1,6 +1,7 @@
 ---
 title: Две книги, которые помогают мне начать 2024 год
 date: 2024-01-07
+publication: essay
 ---
 > «Кто о чём, а вшивый о бане» - народная поговорка
 
