--- a/sanchpetblog/content/essays/20240107_2_books_to_start_2024.md
+++ b/sanchpetblog/content/essays/20240107_2_books_to_start_2024.md
@@ -2,12 +2,13 @@
 title: Две книги, которые помогают мне начать 2024 год
 date: 2024-01-07
 publication: essay
+images:
+-  https://github.com/sanchpet/my_docker_stack/blob/master/sanchpetblog/images/essays/two_books.png?raw=true
+description: Совмещаем прикладные методы и ментальные установки для смены обстановки
 ---
 > «Кто о чём, а вшивый о бане» - народная поговорка
 
 На этих выходных я спешно дописываю исследовательскую работу для универа, поэтому обзор будет максимально ёмким. Книги шли подряд в моём читательском плане, и вместе они создали очень действенную смесь, которая может пригодиться не только мне.
-
-![Книги](https://github.com/sanchpet/my_docker_stack/blob/master/sanchpetblog/images/essays/two_books.png?raw=true)
 
 Какие цели многие ставят перед собой на новый год? Стать совершенно новым человеком, просто оставить позади неприятные вещи, обрести успех или богатство - так или иначе, каждый из нас довлеет к переменам. Для этого необязательно садиться утром на край кровати и задавать себе вопрос: «Кто я, откуда и куда иду?»; новизна всегда готова рывком вторгнуться в нашу жизнь, независимо от наличия духовного кризиса (очень надеюсь, что у вас его нет).
 
